# inventory

./: .gitignore  CLAUDE.md  dev.sh  package.json  pnpm-lock.yaml  something.txt
backend/: CLAUDE.md  Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: db.rs  error.rs  main.rs  models.rs
backend/src/handlers/: CLAUDE.md  activities.rs  categories.rs  items.rs  mod.rs  people.rs  tags.rs  trip_items.rs  trips.rs
frontend/: CLAUDE.md  README.md  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/api/: CLAUDE.md  client.ts
frontend/src/lib/components/: CLAUDE.md  CategoryGroup.svelte  ChecklistPanel.svelte  InlineEdit.svelte  InventoryPanel.svelte  ItemCard.svelte  PersonBadge.svelte  ProgressBar.svelte  SearchFilter.svelte  SlotRow.svelte  SplitPane.svelte  StatusBadge.svelte  StickyPanel.svelte  TripItemRow.svelte
frontend/src/lib/stores/: dragState.svelte.ts
frontend/src/lib/types/: CLAUDE.md  index.ts
frontend/src/lib/utils/: CLAUDE.md  export.ts  status.ts
frontend/src/routes/: +layout.svelte  +page.svelte  CLAUDE.md
frontend/src/routes/activities/: +page.svelte
frontend/src/routes/items/: +page.svelte
frontend/src/routes/trips/: +page.svelte
frontend/src/routes/trips/[id]/: +page.svelte
